# 7-Zip

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/kim/hsl/a7_zip/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/libs/arm64-v8a/: 7zr
app/src/main/assets/libs/armeabi-v7a/: 7zr
app/src/main/assets/libs/x86/: 7zr
app/src/main/assets/libs/x86_64/: 7zr
app/src/main/cpp/: CMakeLists.txt  logging_macros.h  native-lib.cpp
app/src/main/cpp/lib7zr/CPP/ANDROID/7zr/jni/: Android.mk  Application.mk
app/src/main/java/kim/hsl/a7_zip/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/staticLibs/: CMakeLists.txt
app/src/test/java/kim/hsl/a7_zip/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
